<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- App Name -->
    <string name="app_name" translatable="false">Neo Wellbeing</string>

    <!-- Main Preference -->
    <string name="main_preference_category_one_title">Wellbeing settings</string>
    <string name="main_preference_category_two_title">@string/other</string>
    <string name="main_preference_focus_mode_summary">Tap to set up</string>

    <!-- Focus Mode -->
    <string name="focus_mode_main_switch_bar_text">Enable Focus mode</string>
    <string name="focus_mode_summary_text">Focus mode is blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</string>
    <string name="focus_mode_settings_title_text">Focus mode settings</string>
    <string name="focus_mode_set_schedule_text">Set a schedule</string>

    <string name="loading">Loading…</string>
    <string name="setting_desc">Focus mode, bedtime mode, app timers</string>
    <string name="dialog_title">App is blocked</string>
    <string name="dialog_message">Unfortunately, this app is currently not available.</string>
    <string name="dialog_btn_settings">More details</string>
    <string name="channel_description">Contains notifications like \"Focus mode is enabled\"</string>
    <string name="channel_name">Service notifications</string>
    <string name="channel2_description">Contains notifications like \"The app timer for this app is about to run out\"</string>
    <string name="channel2_name">Reminders</string>
    <string name="app_timer_reminder">The app timer for %s is about to run out</string>
    <string name="disabled">Disabled</string>
    <string name="app_icon_content_desc">Application icon</string>
    <string name="suspended_app_details_app">App</string>
    <string name="suspended_app_details_was_suspended_due_to">…was suspended due to:</string>
    <string name="focus_mode">Focus mode</string>
    <string name="focus_mode_enabled">Focus mode is enabled</string>
    <string name="suspended_app_details_focus_mode">Focus mode is currently enabled!</string>
    <string name="notification_focus_mode">Distracting apps are currently disabled.</string>
    <string name="focus_mode_break">Take a break</string>
    <string name="unknown">Unknown</string>
    <string name="suspended_app_details_unknown">The app is suspended for an unknown reason. This probably is a bug!</string>
    <string name="unsuspend">Unsuspend</string>
    <string name="suspended_app_details_manually">The app was manually suspended.</string>
    <string name="manually">Manual suspension</string>
    <string name="notification_desc">Wellbeing is suspending some applications.</string>
    <string name="notification_title">Apps suspended</string>
    <string name="focus_mode_off">Disable</string>
    <string name="notification_focus_mode_break">You are taking a break right now!</string>
    <string name="focus_mode_break_end">End break</string>
    <string name="cancel">Cancel</string>
    <string name="notification_manual">Some apps were manually suspended.</string>
    <string name="unsuspend_all">Unsuspend all</string>
    <plurals name="break_mins">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="break_dialog_1">Use app for 1 minute</string>
    <string name="break_dialog_3">Use app for 3 minutes</string>
    <string name="break_dialog_5">Use app for 5 minutes</string>
    <string name="break_dialog_10">Use app for 10 minutes</string>
    <string name="break_dialog_15">Use app for 15 minutes</string>
    <string name="min_1">1 minute</string>
    <string name="min_3">3 minutes</string>
    <string name="min_5">5 minutes</string>
    <string name="min_10">10 minutes</string>
    <string name="min_15">15 minutes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app">App</string>
    <string name="pkg_name_example" translatable="false">com.android.app</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="focus_mode_pref_dialog">Default break time (dialog)</string>
    <string name="focus_mode_pref_notification">Default break time (notification)</string>
    <string name="manually_dialog_desc">It has less features</string>
    <string name="manually_dialog_title">Use flow non-interrupting dialog</string>
    <string name="manually_all_off">Only unsuspend the app you tried to open</string>
    <string name="manually_all_on">Unsuspend all apps when you are unsuspending one</string>
    <string name="manually_all">Unsuspend all apps</string>
    <string name="focus_mode_dialog">%s and other distracting apps are currently disabled.</string>
    <string name="suspend">Suspend</string>
    <string name="schedule">Schedule</string>
    <string name="bedtime_mode">Bedtime mode</string>
    <string name="bedtime_desc">You should go to sleep now!</string>
    <string name="no_timer">No timer set</string>
    <string name="app_timers">App timers</string>
    <string name="screen_time">Screen time</string>
    <string name="ok">OK</string>
    <string name="desc_container">%1$s (used %2$s)</string>
    <string name="app_timer_exceed">The app timer for this app has elapsed.</string>
    <string name="app_timer_exceed_f">The app timer for %s has elapsed.</string>
    <string name="about">About</string>
    <string name="about_1_title">Neo Wellbeing</string>
    <string name="about_1_desc">A project by the Neo Applications Collective</string>
    <string name="bug_title">Open bug viewer</string>
    <string name="bug_desc">That you found this hidden entry means that you found an bug in the program. Please click here for more details. Thank you for using Neo Wellbeing :)</string>
    <string name="share">Share</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="copied">Copied to clipboard</string>
    <string name="bug_viewer">Bug viewer</string>
    <string name="bed_icon_content_desc">Bedtime mode</string>
    <string name="greyscale">Greyscale</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="sched_charging">Only while charging</string>
    <string name="startTime">Start time:</string>
    <string name="endTime">End time:</string>
    <string name="dpicker_monday">M</string>
    <string name="dpicker_tuesday">T</string>
    <string name="dpicker_wednesday">W</string>
    <string name="dpicker_thursday">T</string>
    <string name="dpicker_friday">F</string>
    <string name="dpicker_saturday">S</string>
    <string name="dpicker_sunday">S</string>
    <string name="add_schedule">Add schedule</string>
    <string name="delete">Delete</string>
    <string name="add_schedule_info">Nothing here yet, try to add an schedule</string>
    <string name="sched_alarm">End with alarm</string>
    <string name="sample_app">Application</string>
    <string name="sample_app_t">23h 59m</string>
    <string name="until" translatable="false">-</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="app_timer_reminder_title">%d minutes left</string>
    <string name="app_timer_reminder_pref">Remind when time is running out</string>
    <string name="always_ask">Always ask</string>
    <string name="whitelist_title">Whitelist mode</string>
    <string name="blacklist_desc">Suspend all apps that you selected</string>
    <string name="whitelist_desc">Suspend all apps except those you selected</string>
    <string name="other">Other</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_count">%d notifications</string>
    <string name="unlocks">Unlocks</string>
    <string name="this_year">This year</string>
    <string name="this_month">This month</string>
    <string name="this_day">Today</string>
    <string name="this_hour">This hour</string>
    <string name="when_year">By year</string>
    <string name="when_month">By month</string>
    <string name="when_day">By day</string>
    <string name="when_hour">By hour</string>
    <string name="stat_view_name">%s - %s</string>
    <string name="total">Total: %d</string>
    <string name="select_hour">Select hour</string>
    <string name="select_date">Select date</string>
    <string name="stat_to_display">Statistic to display</string>
    <string name="time_dimension_to_display">Time dimension to display</string>
    <string name="no_data">No data</string>
</resources>