<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/main_cat1_desc">
        <Preference
            android:key="dashboard"
            android:title="@string/dashboard"
            app:icon="@drawable/baseline_dashboard_24">
            <intent
                android:targetClass="org.eu.droid_ng.wellbeing.ui.DashboardActivity"
                android:targetPackage="org.eu.droid_ng.wellbeing" />
        </Preference>
        <Preference
            android:key="focus_mode"
            android:title="@string/focus_mode"
            app:icon="@drawable/outline_badge_24">
            <intent
                android:targetClass="org.eu.droid_ng.wellbeing.prefs.FocusModeActivity"
                android:targetPackage="org.eu.droid_ng.wellbeing" />
        </Preference>
        <Preference
            android:key="bedtime_mode"
            android:title="@string/bedtime_mode"
            app:icon="@drawable/baseline_bedtime_24">
            <intent
                android:targetClass="org.eu.droid_ng.wellbeing.prefs.BedtimeMode"
                android:targetPackage="org.eu.droid_ng.wellbeing" />
        </Preference>
        <Preference
            android:key="timers"
            android:title="@string/app_timers"
            app:icon="@drawable/ic_focus_mode">
            <intent
                android:targetClass="org.eu.droid_ng.wellbeing.prefs.AppTimers"
                android:targetPackage="org.eu.droid_ng.wellbeing" />
        </Preference>
        <Preference
            android:key="manual"
            android:title="@string/manually"
            app:icon="@drawable/ic_baseline_person_24">
            <intent
                android:targetClass="org.eu.droid_ng.wellbeing.prefs.ManualSuspendActivity"
                android:targetPackage="org.eu.droid_ng.wellbeing" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other">
        <Preference
            android:key="settings"
            android:title="@string/title_activity_settings"
            app:icon="@drawable/baseline_settings_24">
            <intent
                android:targetClass="org.eu.droid_ng.wellbeing.prefs.SettingsActivity"
                android:targetPackage="org.eu.droid_ng.wellbeing" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
