<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".prefs.AppTimers">

	<com.google.android.material.appbar.AppBarLayout
		android:fitsSystemWindows="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.CollapsingToolbarLayout
			style="?attr/collapsingToolbarLayoutLargeSize"
			app:expandedTitleTextAppearance="?attr/textAppearanceHeadlineLarge"
			app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
			android:layout_width="match_parent"
			android:layout_height="?attr/collapsingToolbarLayoutLargeSize">

			<com.google.android.material.appbar.MaterialToolbar
				android:id="@+id/topbar"
				android:elevation="0dp"
				app:layout_collapseMode="pin"
				android:layout_height="?attr/actionBarSize"
				android:layout_width="match_parent"/>

		</com.google.android.material.appbar.CollapsingToolbarLayout>

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:importantForAccessibility="no"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">
		<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="5dp">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/appLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/appIcon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/app_icon_content_desc"
					android:src="@android:drawable/sym_def_app_icon"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_bias="0.06"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/appName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/suspended_app_details_app"
					android:textAppearance="@android:style/TextAppearance.Material.Large"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@+id/appIcon"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/focusMode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:visibility="gone"
				app:contentPadding="10dp"
				app:contentPaddingBottom="0dp"
				style="@style/Widget.Material3.CardView.Filled"
				tools:visibility="visible">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/textView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/focus_mode"
						android:textAppearance="@android:style/TextAppearance.Material.Large"
						android:textSize="24sp"
						android:layout_margin="10dp"
						app:drawableStartCompat="@drawable/outline_badge_24"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/focusModeDesc"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/suspended_app_details_focus_mode"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/textView" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/takeabreakbtn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:text="@string/focus_mode_break"
						android:layout_margin="10dp"
						app:layout_constraintStart_toEndOf="@+id/disablefocusmode"
						app:layout_constraintTop_toBottomOf="@+id/focusModeDesc" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/disablefocusmode"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/focus_mode_off"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/focusModeDesc" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/unknown"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:visibility="gone"
				app:contentPadding="10dp"
				app:contentPaddingBottom="0dp"
				style="@style/Widget.Material3.CardView.Filled"
				tools:visibility="visible">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/unknownHeader"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/unknown"
						android:textAppearance="@android:style/TextAppearance.Material.Large"
						android:textSize="24sp"
						app:drawableStartCompat="@drawable/ic_baseline_bug_report_24"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/unknownDesc"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/suspended_app_details_unknown"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/unknownHeader" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/unsuspendbtn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/unsuspend"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/unknownDesc"
						tools:ignore="DuplicateSpeakableTextCheck" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/manually"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:visibility="gone"
				app:contentPadding="10dp"
				app:contentPaddingBottom="0dp"
				style="@style/Widget.Material3.CardView.Filled"
				tools:visibility="visible">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/manuallyHeader"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/manually"
						android:textAppearance="@android:style/TextAppearance.Material.Large"
						android:textSize="24sp"
						android:layout_margin="10dp"
						app:drawableStartCompat="@drawable/ic_baseline_person_24"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/manuallyDesc"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/suspended_app_details_manually"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/manuallyHeader" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/unsuspendbtn2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="10dp"
						android:text="@string/unsuspend"
						android:layout_margin="10dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toEndOf="@+id/unsuspendallbtn"
						app:layout_constraintTop_toBottomOf="@+id/manuallyDesc" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/unsuspendallbtn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/unsuspend_all"
						android:layout_margin="10dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/manuallyDesc" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/apptimer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:visibility="gone"
				app:contentPadding="10dp"
				app:contentPaddingBottom="0dp"
				style="@style/Widget.Material3.CardView.Filled"
				tools:visibility="visible">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/apptimerHeader"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/app_timers"
						android:textAppearance="@android:style/TextAppearance.Material.Large"
						android:textSize="24sp"
						android:layout_margin="10dp"
						app:drawableStartCompat="@drawable/ic_focus_mode"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/apptimerDesc"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:text="@string/app_timer_exceed"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/apptimerHeader" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/takeabreakbtn2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/focus_mode_break"
						android:layout_margin="10dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/apptimerDesc" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

		</androidx.appcompat.widget.LinearLayoutCompat>
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>