<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	style="@style/Widget.Material3.CardView.Filled"
	app:cardCornerRadius="20dp"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:padding="10dp"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|start"
			android:orientation="horizontal">

			<org.eu.droid_ng.wellbeing.prefs.TimeSettingView
				android:id="@+id/startTime"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp" />

			<androidx.appcompat.widget.AppCompatTextView
				android:layout_marginStart="7dp"
				android:textSize="30sp"
				android:text="@string/until"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />

			<org.eu.droid_ng.wellbeing.prefs.TimeSettingView
				android:id="@+id/endTime"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textSize="18sp" />

			<com.google.android.material.materialswitch.MaterialSwitch
				android:id="@+id/enableCheckBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

		</LinearLayout>

		<org.eu.droid_ng.wellbeing.prefs.DayPicker
			android:id="@+id/dayPicker"
			android:layout_marginVertical="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<LinearLayout
			android:id="@+id/chargerLayout"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:clickable="true"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:importantForAccessibility="no"
				android:width="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/baseline_battery_charging_full_24" />

			<androidx.appcompat.widget.AppCompatTextView
				android:layout_marginStart="10dp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/sched_charging"
				android:layout_weight="1" />

			<com.google.android.material.checkbox.MaterialCheckBox
				android:id="@+id/chargerCheckBox"
				android:clickable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/alarmLayout"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:clickable="true"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageView
				android:importantForAccessibility="no"
				android:width="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/baseline_alarm_24" />

			<androidx.appcompat.widget.AppCompatTextView
				android:layout_marginStart="10dp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/sched_alarm"
				android:layout_weight="1" />

			<com.google.android.material.checkbox.MaterialCheckBox
				android:id="@+id/alarmCheckBox"
				android:clickable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/delete"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:clickable="true"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<androidx.appcompat.widget.AppCompatImageButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				app:srcCompat="@drawable/baseline_delete_24"
				android:width="10dp"
				android:clickable="false"
				android:contentDescription="@string/delete" />

			<androidx.appcompat.widget.AppCompatTextView
				android:layout_marginStart="10dp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/delete"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</com.google.android.material.card.MaterialCardView>